make sure scrollbar is visible in sidebar
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@16795 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdk3.css
+++ b/View/webapp/wdk/css/wdk3.css
@@ -267,6 +267,7 @@ body {
   width: 210px;
   left: 0;
   padding-top: 1em;
+  padding-right: 0;
 }
 
 .wdk-PageColumn-main,
